2008-06-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genNearPointerGet, genNearPointerSet): fixed bug 1938300
	* support/regression/tests/bug1938300.c: new, added

2008-06-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/asm/ds390/features.h,
	* device/include/asm/mcs51/features.h,
	* device/include/mcs51/regc515c.h: inserted LGPL notice

2008-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/div.s,
	* device/lib/z80/div.s: fixed bug 1904314 by applying a modified part of
	  patch 1597883, Thanks Robert Ramey

2008-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (createIvalType, createIvalStruct, createIvalArray,
	  createIvalCharPtr, createIvalPtr, createIval),
	* src/SDCCval.h
	* src/SDCCval.c (convertIListToConstList, list2expr): handle incomplete
	  initializers for local auto variables
	* support/regression/tests/zeropad.c: added testcase for auto initializers

2008-05-26 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/startup/crt0.c,
	* device/lib/pic16/startup/crt0i.c,
	* device/lib/pic16/startup/crt0iz.c: clean up, make use of access bank
	  explicit, fixed curr_entry loop for >= 256 initializer records,
	  removed debug code (write to 0xf7e)

2008-05-25 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f627a.h,
	* device/include/pic/pic16f628a.h,
	* device/include/pic/pic16f648a.h: added missing ports

2008-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/float.h: added __INFINITY
	* device/lib/_fsadd.c: handle overflows
	* device/lib/_fsmul.c,
	* device/lib/_fsdiv.c: use __INFINITY
	* device/lib/_fseq.c,
	* device/lib/_fsneq.c: handle -0.0
	* sim/ucsim/s51.src/uc89c51r.cc,
	* sim/ucsim/s51.src/uc89c51rcl.h: fixed bug 1385430
	* sim/ucsim/sim.src/hwcl.h: */* confuses VC
	* src/mcs51/gen.c (genSend): fixed bug with --xstack
	* support/regression/ports/mcs51-xstack-auto/spec.mk: print floats